[package]
name = "patterns"
version = "0.2.1"
edition = "2021"
authors = ["greaka <cargo@greaka.de>"]
description = "no_std compatible pattern scan library using simd"
repository = "https://github.com/greaka/patterns"
license = "MIT/Apache-2.0"

# Tests and benchmarks are in a sub crate
[lib]
bench = false
test = false
doctest = false

[workspace]
members = [ "./tests" ]

[features]
second_byte = []