[package]
name = "patterns"
version = "0.3.1"
edition = "2021"
authors = ["greaka <cargo@greaka.de>"]
description = "no_std compatible pattern scan library using simd"
repository = "https://github.com/greaka/patterns"
license = "MIT/Apache-2.0"

[[bench]]
name = "main"
harness = false

[profile.bench]
debug = true

[dev-dependencies]
aligned-vec = "0.6.1"
criterion = "0.5.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
